Dark mode button fixed

--- a/static/global.css
+++ b/static/global.css
@@ -172,9 +172,9 @@ body:has(nav > input[type='checkbox']:checked) {
   --navbar-bg: rgba(16, 19, 21, 0.9);
   --footer-bg: var(--acm-gray);
   --card-bg: var(--acm-gray);
-  --button-bg: var(--acm-dark);
+  --button-bg: var(--acm-gray);
+  --button-toggle: var(--acm-gray);
   --button-hover: #3d4043;
-  --button-toggle: var(--acm-dark);
   --box-shadow: var(--nav-shadow);
 }
 
